[project]
name = "ai-art-director"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.32.1",
    "langfuse>=3.0.0",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "opencv-python>=4.11.0.86",
    "openinference-instrumentation-smolagents>=0.1.12",
    "opentelemetry-exporter-otlp>=1.34.0",
    "opentelemetry-sdk>=1.34.0",
    "pillow>=11.2.1",
    "replicate>=1.0.7",
    "smolagents[telemetry,toolkit]>=1.17.0",
]
